WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
122404
[Mac] Drawing video into canvas doesn't work on the first attempt
https://bugs.webkit.org/show_bug.cgi?id=122404
Summary
[Mac] Drawing video into canvas doesn't work on the first attempt
Jer Noble
Reported
2013-10-05 22:07:57 PDT
[Mac] Drawing video into canvas doesn't work on the first attempt
Attachments
Patch
(85.09 KB, patch)
2013-10-05 22:18 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-12 for mac-mountainlion-wk2
(690.49 KB, application/zip)
2013-10-05 23:06 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from webkit-ews-02 for mac-mountainlion
(706.04 KB, application/zip)
2013-10-05 23:27 PDT
,
Build Bot
no flags
Details
Patch
(83.71 KB, patch)
2013-10-06 00:16 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-16 for mac-mountainlion-wk2
(545.98 KB, application/zip)
2013-10-06 01:09 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from webkit-ews-08 for mac-mountainlion
(562.55 KB, application/zip)
2013-10-06 01:26 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from webkit-ews-06 for mac-mountainlion
(556.19 KB, application/zip)
2013-10-06 02:24 PDT
,
Build Bot
no flags
Details
Patch
(83.27 KB, patch)
2013-10-06 15:22 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-15 for mac-mountainlion-wk2
(541.16 KB, application/zip)
2013-10-06 16:09 PDT
,
Build Bot
no flags
Details
Patch
(83.27 KB, patch)
2013-10-06 16:55 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-15 for mac-mountainlion-wk2
(540.27 KB, application/zip)
2013-10-06 17:43 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from webkit-ews-07 for mac-mountainlion
(560.72 KB, application/zip)
2013-10-06 20:11 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from webkit-ews-03 for mac-mountainlion
(558.57 KB, application/zip)
2013-10-06 21:09 PDT
,
Build Bot
no flags
Details
Patch
(84.47 KB, patch)
2013-10-06 22:20 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-14 for mac-mountainlion-wk2
(532.54 KB, application/zip)
2013-10-06 23:03 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from webkit-ews-06 for mac-mountainlion
(557.73 KB, application/zip)
2013-10-06 23:28 PDT
,
Build Bot
no flags
Details
Patch
(148.85 KB, patch)
2013-10-07 00:28 PDT
,
Jer Noble
eric.carlson
: review+
Details
Formatted Diff
Diff
Show Obsolete
(6)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2013-10-05 22:15:52 PDT
<
rdar://problem/15144048
>
Jer Noble
Comment 2
2013-10-05 22:18:00 PDT
Created
attachment 213494
[details]
Patch
Build Bot
Comment 3
2013-10-05 23:06:36 PDT
Comment on
attachment 213494
[details]
Patch
Attachment 213494
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/3509016
New failing tests: media/video-canvas-drawing.html
Build Bot
Comment 4
2013-10-05 23:06:38 PDT
Created
attachment 213497
[details]
Archive of layout-test-results from webkit-ews-12 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-12 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Build Bot
Comment 5
2013-10-05 23:27:19 PDT
Comment on
attachment 213494
[details]
Patch
Attachment 213494
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/3511012
New failing tests: media/video-canvas-drawing.html
Build Bot
Comment 6
2013-10-05 23:27:21 PDT
Created
attachment 213499
[details]
Archive of layout-test-results from webkit-ews-02 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-02 Port: mac-mountainlion Platform: Mac OS X 10.8.5
Jer Noble
Comment 7
2013-10-06 00:16:08 PDT
Created
attachment 213500
[details]
Patch
Build Bot
Comment 8
2013-10-06 01:09:31 PDT
Comment on
attachment 213500
[details]
Patch
Attachment 213500
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/3493030
New failing tests: media/video-canvas-drawing.html
Build Bot
Comment 9
2013-10-06 01:09:33 PDT
Created
attachment 213503
[details]
Archive of layout-test-results from webkit-ews-16 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-16 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Build Bot
Comment 10
2013-10-06 01:26:30 PDT
Comment on
attachment 213500
[details]
Patch
Attachment 213500
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/3514022
New failing tests: media/video-canvas-drawing.html
Build Bot
Comment 11
2013-10-06 01:26:32 PDT
Created
attachment 213504
[details]
Archive of layout-test-results from webkit-ews-08 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-08 Port: mac-mountainlion Platform: Mac OS X 10.8.5
Build Bot
Comment 12
2013-10-06 02:24:55 PDT
Comment on
attachment 213500
[details]
Patch
Attachment 213500
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/3518043
New failing tests: media/video-canvas-drawing.html
Build Bot
Comment 13
2013-10-06 02:24:57 PDT
Created
attachment 213505
[details]
Archive of layout-test-results from webkit-ews-06 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-06 Port: mac-mountainlion Platform: Mac OS X 10.8.5
Jer Noble
Comment 14
2013-10-06 15:22:09 PDT
Created
attachment 213530
[details]
Patch
Build Bot
Comment 15
2013-10-06 16:09:46 PDT
Comment on
attachment 213530
[details]
Patch
Attachment 213530
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/3488083
New failing tests: media/video-canvas-drawing.html
Build Bot
Comment 16
2013-10-06 16:09:49 PDT
Created
attachment 213534
[details]
Archive of layout-test-results from webkit-ews-15 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-15 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Jer Noble
Comment 17
2013-10-06 16:55:12 PDT
Created
attachment 213540
[details]
Patch One more try to get this test passing on Mac.
Build Bot
Comment 18
2013-10-06 17:43:17 PDT
Comment on
attachment 213540
[details]
Patch
Attachment 213540
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/3520042
New failing tests: media/video-canvas-drawing.html
Build Bot
Comment 19
2013-10-06 17:43:18 PDT
Created
attachment 213546
[details]
Archive of layout-test-results from webkit-ews-15 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-15 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Build Bot
Comment 20
2013-10-06 20:11:01 PDT
Comment on
attachment 213540
[details]
Patch
Attachment 213540
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/3363115
New failing tests: media/video-canvas-drawing.html
Build Bot
Comment 21
2013-10-06 20:11:03 PDT
Created
attachment 213556
[details]
Archive of layout-test-results from webkit-ews-07 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-07 Port: mac-mountainlion Platform: Mac OS X 10.8.5
Build Bot
Comment 22
2013-10-06 21:08:59 PDT
Comment on
attachment 213540
[details]
Patch
Attachment 213540
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/3514093
New failing tests: media/video-canvas-drawing.html
Build Bot
Comment 23
2013-10-06 21:09:02 PDT
Created
attachment 213561
[details]
Archive of layout-test-results from webkit-ews-03 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-03 Port: mac-mountainlion Platform: Mac OS X 10.8.5
Jer Noble
Comment 24
2013-10-06 22:20:30 PDT
Created
attachment 213563
[details]
Patch One more try to get this test passing on Mac.
Build Bot
Comment 25
2013-10-06 23:03:53 PDT
Comment on
attachment 213563
[details]
Patch
Attachment 213563
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/3563012
New failing tests: media/video-canvas-drawing.html
Build Bot
Comment 26
2013-10-06 23:03:55 PDT
Created
attachment 213565
[details]
Archive of layout-test-results from webkit-ews-14 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-14 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Build Bot
Comment 27
2013-10-06 23:28:08 PDT
Comment on
attachment 213563
[details]
Patch
Attachment 213563
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/3569017
New failing tests: media/video-canvas-drawing.html
Build Bot
Comment 28
2013-10-06 23:28:10 PDT
Created
attachment 213566
[details]
Archive of layout-test-results from webkit-ews-06 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-06 Port: mac-mountainlion Platform: Mac OS X 10.8.5
Jer Noble
Comment 29
2013-10-07 00:20:08 PDT
As far as I can tell, this test keeps failing because the bots will not play a <video> element which is not in the DOM. I was hoping to structure the test so that the video did not have to be visible, but it appears I'm going to have to go down that route.
Jer Noble
Comment 30
2013-10-07 00:28:29 PDT
Created
attachment 213568
[details]
Patch One more try to get this test passing on Mac.
Dean Jackson
Comment 31
2013-10-07 13:03:37 PDT
Landed for Jer:
https://trac.webkit.org/r157055
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug